eks-msk-rds-app/main.tf
provider "aws" {
    region = var.aws_region
    # Provide default tags to identify all resources
    default_tags {
      tags = {      
        ManagedBy = "GitAwsTerraformProjects"
        Project   = "eks-msk-rds-app"
      }
    }
}

resource "aws_vpc" "eks_msk_rds_app_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "eks-msk-rds-app-vpc"
  }
}

resource "aws_internet_gateway" "eks_msk_rds_app_igw" {
  vpc_id = aws_vpc.eks_msk_rds_app_vpc.id
  tags = {
    Name = "eks-msk-rds-app-igw"
  }
}

resource "aws_route_table" "eks_msk_rds_app_public_rt" {
  vpc_id = aws_vpc.eks_msk_rds_app_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.eks_msk_rds_app_igw.id
  }
  tags = {
    Name = "eks-msk-rds-app-route-table-public"
  }
}

resource "aws_route_table" "eks_msk_rds_app_private_rt" {
  vpc_id = aws_vpc.eks_msk_rds_app_vpc.id

  tags = {
    Name = "eks-msk-rds-app-route-table-private"
  }
}

resource "aws_route_table" "eks_msk_rds_app_msk_rt" {
  vpc_id = aws_vpc.eks_msk_rds_app_vpc.id
  tags = {
    Name = "eks-msk-rds-app-route-table-msk"
  }
}

resource "aws_route_table" "eks_msk_rds_app_rds_rt" {
  vpc_id = aws_vpc.eks_msk_rds_app_vpc.id

  tags = {
    Name = "eks-msk-rds-app-route-table-rds"
  }
}

resource "aws_subnet" "eks_msk_rds_app_subnet_public_1" {
  vpc_id                  = aws_vpc.eks_msk_rds_app_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-2a"
  map_public_ip_on_launch = true
  tags = {
    Name = "eks-msk-rds-app-subnet-public-1"
  }
}

resource "aws_subnet" "eks_msk_rds_app_subnet_public_2" {
  vpc_id                  = aws_vpc.eks_msk_rds_app_vpc.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-2b"
  map_public_ip_on_launch = true
  tags = {
    Name = "eks-msk-rds-app-subnet-public-2"
  }
}

resource "aws_subnet" "eks_msk_rds_app_subnet_private_eks_1" {
  vpc_id                  = aws_vpc.eks_msk_rds_app_vpc.id
  cidr_block              = "10.0.3.0/24"
  availability_zone       = "us-east-2a"
  map_public_ip_on_launch = false
  tags = {
    Name = "eks-msk-rds-app-subnet-private-eks-1"
  }
}

resource "aws_subnet" "eks_msk_rds_app_subnet_private_eks_2" {
  vpc_id                  = aws_vpc.eks_msk_rds_app_vpc.id
  cidr_block              = "10.0.4.0/24"
  availability_zone       = "us-east-2b"
  map_public_ip_on_launch = false
  tags = {
    Name = "eks-msk-rds-app-subnet-private-eks-2"
  }
}

resource "aws_subnet" "eks_msk_rds_app_subnet_private_msk_1" {
  vpc_id                  = aws_vpc.eks_msk_rds_app_vpc.id
  cidr_block              = "10.0.5.0/24"
  availability_zone       = "us-east-2a"
  map_public_ip_on_launch = false
  tags = {
    Name = "eks-msk-rds-app-subnet-private-msk-1"
  }
}

resource "aws_subnet" "eks_msk_rds_app_subnet_private_msk_2" {
  vpc_id                  = aws_vpc.eks_msk_rds_app_vpc.id
  cidr_block              = "10.0.6.0/24"
  availability_zone       = "us-east-2b"
  map_public_ip_on_launch = false
  tags = {
    Name = "eks-msk-rds-app-subnet-private-msk-2"
  }
}

resource "aws_subnet" "eks_msk_rds_app_subnet_rds_1" {
  vpc_id                  = aws_vpc.eks_msk_rds_app_vpc.id
  cidr_block              = "10.0.7.0/24"
  availability_zone       = "us-east-2a"
  map_public_ip_on_launch = false
  tags = {
    Name = "eks-msk-rds-app-subnet-rds-1"
  }
}

resource "aws_subnet" "eks_msk_rds_app_subnet_rds_2" {
  vpc_id                  = aws_vpc.eks_msk_rds_app_vpc.id
  cidr_block              = "10.0.8.0/24"
  availability_zone       = "us-east-2b"
  map_public_ip_on_launch = false
  tags = {
    Name = "eks-msk-rds-app-subnet-rds-2"
  }
}

resource "aws_route_table_association" "eks_msk_rds_app_public_association_1" {
  subnet_id      = aws_subnet.eks_msk_rds_app_subnet_public_1.id
  route_table_id = aws_route_table.eks_msk_rds_app_public_rt.id
}

resource "aws_route_table_association" "eks_msk_rds_app_public_association_2" {
  subnet_id      = aws_subnet.eks_msk_rds_app_subnet_public_2.id
  route_table_id = aws_route_table.eks_msk_rds_app_public_rt.id
}

resource "aws_route_table_association" "eks_msk_rds_app_private_association_1" {
  subnet_id      = aws_subnet.eks_msk_rds_app_subnet_private_eks_1.id
  route_table_id = aws_route_table.eks_msk_rds_app_private_rt.id
}

resource "aws_route_table_association" "eks_msk_rds_app_private_association_2" {
  subnet_id      = aws_subnet.eks_msk_rds_app_subnet_private_eks_2.id
  route_table_id = aws_route_table.eks_msk_rds_app_private_rt.id
}

resource "aws_route_table_association" "eks_msk_rds_app_rds_association_1" {
  subnet_id      = aws_subnet.eks_msk_rds_app_subnet_rds_1.id
  route_table_id = aws_route_table.eks_msk_rds_app_rds_rt.id
}

resource "aws_route_table_association" "eks_msk_rds_app_rds_association_2" {
  subnet_id      = aws_subnet.eks_msk_rds_app_subnet_rds_2.id
  route_table_id = aws_route_table.eks_msk_rds_app_rds_rt.id
}

resource "aws_route_table_association" "eks_msk_rds_app_msk_association_1" {
  subnet_id      = aws_subnet.eks_msk_rds_app_subnet_private_msk_1.id
  route_table_id = aws_route_table.eks_msk_rds_app_msk_rt.id
}

resource "aws_route_table_association" "eks_msk_rds_app_msk_association_2" {
  subnet_id      = aws_subnet.eks_msk_rds_app_subnet_private_msk_2.id
  route_table_id = aws_route_table.eks_msk_rds_app_msk_rt.id
}


# Nat Gateways
resource "aws_eip" "nat_gw" {  
  tags = {
    Name = "eks-msk-rds-app-ngw"
  }
}

resource "aws_nat_gateway" "nat_gw" {
  allocation_id = aws_eip.nat_gw.id
  subnet_id     = aws_subnet.eks_msk_rds_app_subnet_public_1.id
  tags = {
    Name = "eks-msk-rds-app-nat"
  }
}

resource "aws_route" "private_to_nat" {
  route_table_id         = aws_route_table.eks_msk_rds_app_private_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat_gw.id
}

resource "aws_route" "msk_to_nat" {
  route_table_id         = aws_route_table.eks_msk_rds_app_msk_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat_gw.id
}

resource "aws_route" "eks_private_to_nat" {
  route_table_id         = aws_route_table.eks_msk_rds_app_private_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat_gw.id
}

# Security Groups
resource "aws_security_group" "eks_msk_rds_app_sg_eks_node" {
  name        = "eks-msk-rds-app-eks-node-sg"
  description = "Security group for EKS worker nodes"
  vpc_id      = aws_vpc.eks_msk_rds_app_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow SSH from my IP"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eks-msk-rds-app-sg-eks-node"
  }
}

resource "aws_security_group" "eks_msk_rds_app_sg_rds" {
  name        = "eks-msk-rds-app-sg-rds"
  description = "Allow MySQL from EC2"
  vpc_id      = aws_vpc.eks_msk_rds_app_vpc.id

  ingress {
    description     = "MySQL access from EKS Nodes"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.eks_msk_rds_app_sg_eks_node.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_db_subnet_group" "db_subnet_group" {
  name       = "eks-msk-rds-app-rds-db-sbnt-grp"
  subnet_ids = [
    aws_subnet.eks_msk_rds_app_subnet_rds_1.id,
    aws_subnet.eks_msk_rds_app_subnet_rds_2.id
  ]
}

# # RDS Database
resource "aws_db_instance" "default" {
  identifier              = "terraform-db"
  allocated_storage       = 20
  storage_type            = "gp2"
  engine                  = "mysql"
  engine_version          = "8.0.42"
  instance_class          = "db.t4g.micro"    
  username                = var.db_username
  password                = var.db_password
  db_name                 = var.db_name
  db_subnet_group_name    = aws_db_subnet_group.db_subnet_group.name
  vpc_security_group_ids  = [aws_security_group.eks_msk_rds_app_sg_rds.id]
  skip_final_snapshot     = true
  publicly_accessible     = false
  multi_az                = false
  backup_retention_period = 0
  tags = {
    Name = "eks-msk-rds-app-rds-terraform-db"
  }
}
